[tool.poetry]
name = "princess-milana"
version = "0.1.0"
description = "Telegram Bot for Princess Milana"
authors = ["Stanislav Dzasokhov <kurtat_programmer@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
